slightly expanded header for smaller screens to resolve welcome message spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,7 +384,7 @@ footer div {
     }
 
     header {
-        height: 25rem;
+        height: 28rem;
     }
 
     #welcome {
